--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,10 +1,10 @@
 <div class="jumbotron bg-white text-center">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 cities">
         <app-cities></app-cities>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-8 weather">
         <app-weather></app-weather>
       </div>
     </div>
